[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -13,6 +13,8 @@
         </div>
  <script type="text/javascript" src="/ui/main.js">
         </script>
-       
+       <script>
+       alert('i am yuor new java script');
+       </script>
     </body>
 </html>
